--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Lexend Deca -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Akronim&family=Autour+One&family=Birthstone+Bounce:wght@400;500&family=Bungee+Shade&family=Cal+Sans&family=Cedarville+Cursive&family=Comforter&family=Comforter+Brush&family=Croissant+One&family=DynaPuff:wght@400..700&family=Fuggles&family=Grechen+Fuemen&family=Jersey+10&family=Kaushan+Script&family=Kolker+Brush&family=Langar&family=Lexend+Deca:wght@100..900&family=Linefont:wdth,wght@112.5,4..1000&family=Mansalva&family=Mogra&family=Oregano:ital@0;1&family=Protest+Riot&family=Righteous&family=Rock+Salt&family=Silkscreen:wght@400;700&family=Slackside+One&family=Splash&family=Tilt+Warp&family=VT323&display=swap" rel="stylesheet">
+  <title>Vite + React</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
