--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Akronim&family=Autour+One&family=Birthstone+Bounce:wght@400;500&family=Bungee+Shade&family=Cal+Sans&family=Cedarville+Cursive&family=Comforter&family=Comforter+Brush&family=Croissant+One&family=DynaPuff:wght@400..700&family=Fuggles&family=Grechen+Fuemen&family=Jersey+10&family=Kaushan+Script&family=Kolker+Brush&family=Langar&family=Lexend+Deca:wght@100..900&family=Linefont:wdth,wght@112.5,4..1000&family=Mansalva&family=Mogra&family=Oregano:ital@0;1&family=Protest+Riot&family=Righteous&family=Rock+Salt&family=Silkscreen:wght@400;700&family=Slackside+One&family=Splash&family=Tilt+Warp&family=VT323&display=swap" rel="stylesheet">
    -->
-
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Lexend+Deca:wght@100..900&display=swap" rel="stylesheet">
